old/quic-rpc-derive/tests/compile_fail/duplicate_type.stderr
error: Each variant must have a unique request type
 --> tests/compile_fail/duplicate_type.rs:4:1
  |
4 | enum Enum {
  | ^^^^
